--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ London, UK, N1C 4DN<br/><br/>
 <!--<a target="_blank" href="cv.pdf">CV</a><br/>-->
 
 <br/><br/>
-I am a research scientist at <a href="https://deepmind.com/" target="_blank">DeepMind</a> in London, where I work on in better understanding and improving large-scale deep learning.
-I currently focus on topics in optimization and initialization, and more recently have been working on privacy-preserving machine learning.
+I am a research scientist at <a href="https://deepmind.com/" target="_blank">DeepMind</a> in London, where I work on better understanding and improving large-scale deep learning.
+I currently focus on topics in optimization and initialization, and more recently have been working on privacy-preserving machine learning. Please feel free to drop me a line if you want to chat about any of these topics.
 <br/><br/>
 	
 I completed my PhD in 2018 at the <a href="https://www.cs.umd.edu/" target="_blank">University of Maryland</a>, where I was advised by <a href="https://www.cs.umd.edu/~nau/" target="_blank">Dana Nau</a> and <a href="http://www.cs.umd.edu/~tomg/" target="_blank">Tom Goldstein</a>.
