--- a/index.html
+++ b/index.html
@@ -62,16 +62,15 @@ I have previously interned at <a href="https://www.ttic.edu/" target="_blank">To
 
 <br/><br/>
 <h3>RECENT TALKS</h3>
-<br/><br/>
 <ul>
 	<li>
 		<span class="title">High-Accuracy Differentially Private Image Classification</span>: <a href="docs/dpsgd-talk.pdf" target="_blank">slides</a><br/>
-		At Google Brain, University College London, University of Maryland, SPML Seminar, Oracle Labs and IIT Kharagpur. (2022)
+		At Google Brain, University College London, University of Maryland, Security & Privacy in ML Seminar, Oracle Labs and Indian Institute of Technology Kharagpur. (2022)
 		<br/><br/>
 		
 	<li>		
 		<span class="title">Normalizer-Free Networks</span>: <a href="docs/nfnets-talk.pdf" target="_blank">slides</a><br/>
-		At Google Brain, University College London, Swiss Federal Institute of Technology Lausanne (EPFL). (2021)
+		At Google Brain, University College London and Swiss Federal Institute of Technology Lausanne (EPFL). (2021)
 		<br/><br/>
 </ul>
 	
