--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 	<a href="https://arxiv.org/pdf/2204.13650.pdf" target="_blank">paper</a> /
 	<a href="https://github.com/deepmind/jax_privacy" target="_blank">code</a> /
 	<a href="javascript:unhide('dpsgd22bib');">bibtex</a> /
-	<a href="javascript:unhide('dpsgd22tldr');">tl;dr</a>
+<!-- 	<a href="javascript:unhide('dpsgd22tldr');">tl;dr</a> -->
+	<a href="https://twitter.com/sohamde_/status/1537842490128093184" target="_blank">tl;dr</a>
 	<div id="dpsgd22bib" class="hidden"><div class="bibstyle"><br/>
 @article{de2022unlocking, <br/>
   title={Unlocking high-accuracy differentially private image classification through scale}, <br/>
