--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@ Machine learning models that were trained under standard training pipelines can 
 	<a href="https://arxiv.org/pdf/2102.06171.pdf" target="_blank">paper</a> /
 	<a href="https://github.com/deepmind/deepmind-research/tree/master/nfnets" target="_blank">code</a> /
 	<a href="javascript:unhide('nfnet21bib');">bibtex</a> /
-	<a href="javascript:unhide('nfnet21tldr');">tl;dr</a>
+<!-- 	<a href="javascript:unhide('nfnet21tldr');">tl;dr</a> -->
+	<a href="https://twitter.com/sohamde_/status/1360219419977342984" target="_blank">tl;dr</a>
 	<div id="nfnet21bib" class="hidden"><div class="bibstyle"><br/>
 @article{brock2021high, <br/>
   title={High-Performance Large-Scale Image Recognition Without Normalization}, <br/>
