--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@ BatchNorm is a key component of most vision models, but it has many undesirable 
 	ICLR 2021<br/>
 	<a href="https://arxiv.org/pdf/2101.12176.pdf" target="_blank">paper</a> /
 	<a href="javascript:unhide('beasgd21bib');">bibtex</a> /
-	<a href="javascript:unhide('beasgd21tldr');">tl;dr</a>
+<!-- 	<a href="javascript:unhide('beasgd21tldr');">tl;dr</a> -->
+	<a href="https://twitter.com/DeepMind/status/1356931190448664577" target="_blank">tl;dr</a>
 	<div id="beasgd21bib" class="hidden"><div class="bibstyle"><br/>
 @inproceedings{smith2021origin, <br/>
   title={On the Origin of Implicit Regularization in Stochastic Gradient Descent}, <br/>
