--- a/index.html
+++ b/index.html
@@ -80,6 +80,27 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 
 <ul>
 	<li>
+	<span class="title">Resurrecting Recurrent Neural Networks for Long Sequences</span><br/> 
+	Antonio Orvieto, Samuel L Smith, Albert Gu, Anushan Fernando, Caglar Gulcehre, Razvan Pascanu, Soham De<br/>
+	ICML 2023<br/>
+	<a href="https://arxiv.org/pdf/2303.06349.pdf" target="_blank">paper</a> /
+	<a href="javascript:unhide('lru23bib');">bibtex</a> /
+<!-- 	<a href="javascript:unhide('dpsgd22tldr');">tl;dr</a> -->
+	<a href="javascript:unhide('lru23tldr');">tl;dr</a>
+	<div id="lru23bib" class="hidden"><div class="bibstyle"><br/>
+@article{orvieto2023resurrecting, <br/>
+  title={Resurrecting recurrent neural networks for long sequences}, <br/>
+  author={Orvieto, Antonio and Smith, Samuel L and Gu, Albert and Fernando, Anushan and Gulcehre, Caglar and Pascanu, Razvan and De, Soham}, <br/>
+  journal={arXiv preprint arXiv:2303.06349}, <br/>
+  year={2023} <br/>
+} <br/>
+	</div></div>
+	<div id="lru23tldr" class="hidden"><br/>
+We show how to design deep RNNs to learn long-range dependencies in sequential data.
+	</div>
+	<br/><br/>
+	
+	<li>
 	<span class="title">Unlocking High-Accuracy Differentially Private Image Classification through Scale</span><br/> 
 	<b>Soham De</b>, Leonard Berrada, Jamie Hayes, Samuel L Smith, Borja Balle<br/>
 	Preprint<br/>
