--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@ London, UK, N1C 4DN<br/><br/>
 
 <br/><br/>
 I am a research scientist at <a href="https://deepmind.com/" target="_blank">DeepMind</a> in London, where I work on better understanding and improving large-scale deep learning.
-I currently focus on topics in optimization and initialization, and more recently have been working on privacy-preserving machine learning. Feel free to drop me a line if you want to chat about any of these topics.
+I currently focus on topics in optimization and learning dynamics, efficient training and inference, and scaling principles. 
+I am also interested in robustness and privacy of deep learning models.
+Feel free to drop me a line if you want to chat about any of these topics.
 <br/><br/>
 	
 I completed my PhD in 2018 at the <a href="https://www.cs.umd.edu/" target="_blank">University of Maryland</a>, where I was advised by <a href="https://www.cs.umd.edu/~nau/" target="_blank">Dana Nau</a> and <a href="http://www.cs.umd.edu/~tomg/" target="_blank">Tom Goldstein</a>.
@@ -63,6 +65,11 @@ I have previously interned at <a href="https://www.ttic.edu/" target="_blank">To
 <br/><br/>
 <h3>RECENT TALKS</h3>
 <ul>
+	<li>
+		<span class="title">State Space Models and the return of RNNs</span><br/>
+		Keynote at ICML Workshop on Next Generation of Sequence Modeling Architectures. (2024)
+		<br/><br/>
+		
 	<li>
 		<span class="title">High-Accuracy Differentially Private Image Classification</span>: <a href="docs/dpsgd-talk.pdf" target="_blank">slides</a><br/>
 		At Google Brain, University College London, University of Maryland, Security & Privacy in ML Seminar, Oracle Labs and Indian Institute of Technology Kharagpur. (2022)
