--- a/index.html
+++ b/index.html
@@ -87,8 +87,28 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 
 <ul>
 	<li>
+	<span class="title">Griffin: Mixing Gated Linear Recurrences with Local Attention for Efficient Language Models</span><br/> 
+	<b>Soham De</b>, Samuel L. Smith, Anushan Fernando, Aleksandar Botev, George Cristian-Muraru, et al<br/>
+	Preprint<br/>
+	<a href="https://arxiv.org/pdf/2402.19427" target="_blank">paper</a> /
+	<a href="javascript:unhide('griffin24bib');">bibtex</a> /
+	<a href="javascript:unhide('griffin24tldr');">tl;dr</a>
+	<div id="griffin24bib" class="hidden"><div class="bibstyle"><br/>
+@article{de2024griffin, <br/>
+  title={Griffin: Mixing gated linear recurrences with local attention for efficient language models}, <br/>
+  author={De, Soham and Smith, Samuel L and Fernando, Anushan and Botev, Aleksandar and Cristian-Muraru, George and Gu, Albert and Haroun, Ruba and Berrada, Leonard and Chen, Yutian and Srinivasan, Srivatsan and others}, <br/>
+  journal={arXiv preprint arXiv:2402.19427}, <br/>
+  year={2024} <br/>
+} <br/>
+	</div></div>
+	<div id="griffin24tldr" class="hidden"><br/>
+We propose Hawk (a purely linear RNN) and Griffin (hybrid model) language models that are competitive at scale with well-tuned transformers and have fast training and inference.
+	</div>
+	<br/><br/>
+	
+	<li>
 	<span class="title">Resurrecting Recurrent Neural Networks for Long Sequences</span><br/> 
-	Antonio Orvieto, Samuel L Smith, Albert Gu, Anushan Fernando, Caglar Gulcehre, Razvan Pascanu, Soham De<br/>
+	Antonio Orvieto, Samuel L Smith, Albert Gu, Anushan Fernando, Caglar Gulcehre, Razvan Pascanu, <b>Soham De</b><br/>
 	ICML 2023<br/>
 	<a href="https://arxiv.org/pdf/2303.06349.pdf" target="_blank">paper</a> /
 	<a href="javascript:unhide('lru23bib');">bibtex</a> /
@@ -236,7 +256,7 @@ While it has long been argued that minibatch SGD can generalize better than larg
 	<br/><br/>
 -->
 
-	<li>
+<!-- 	<li>
 	<span class="title">The Impact of Neural Network Overparameterization on Gradient Confusion and Stochastic Gradient Descent</span><br/> 
 	Karthik A. Sankararaman*, <b>Soham De*</b>, Zheng Xu, W. Ronny Huang, Tom Goldstein<br/>
 	ICML 2020<br/>
@@ -254,7 +274,7 @@ While it has long been argued that minibatch SGD can generalize better than larg
 	<div id="gc19tldr" class="hidden"><br/>
 At standard Gaussian initializations, we prove that increased layer width improves and increased network depth hurts trainability of neural networks. Orthogonal initializations make the early training dynamics independent of depth, but is applicable only for linear or tanh networks. Finally, we show that the combination of batch normalization and skip connections enable us to train very deep networks in practice.
 	</div>
-	<br/><br/>
+	<br/><br/> -->
 
 <!-- 	<li>
 	<span class="title">Adversarial robustness through local linearization</span><br/> 
