--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ Full List: <a target="_blank" href="https://scholar.google.com/citations?hl=en&u
 	<b>Soham De</b>, Samuel L. Smith, Anushan Fernando, Aleksandar Botev, George Cristian-Muraru, et al<br/>
 	Preprint<br/>
 	<a href="https://arxiv.org/pdf/2402.19427" target="_blank">paper</a> /
+	<a href="https://github.com/google-deepmind/recurrentgemma" target="_blank">code</a> /
+	<a href="https://www.kaggle.com/models/google/recurrentgemma" target="_blank">checkpoints</a> /
 	<a href="javascript:unhide('griffin24bib');">bibtex</a> /
 	<a href="javascript:unhide('griffin24tldr');">tl;dr</a>
 	<div id="griffin24bib" class="hidden"><div class="bibstyle"><br/>
@@ -369,7 +371,7 @@ Advances over the centuries have greatly increased the degree to which humans ch
 </ul>
 
 <hr/>
-Last Updated: June 23, 2022
+Last Updated: November 28, 2024
 
 </body>
 </html>
